# yedam-sts

./: .dockerignore  .env.example  .env.vram  .gitattributes  .gitignore  BENCHMARKS.md  CLAUDE.md  Dockerfile.slim  FEATURES.md  PLAN.md  README.md  deploy.sh  docker-compose.dev.yml  docker-compose.tensorrt.yml  docker-compose.yml  extract_glossary.py  ruff.toml  vram_budget.yml
benchmarks/: stt_results.md
orchestrator/: .dockerignore  Dockerfile  pyproject.toml
orchestrator/config/: llm_prompt_church.txt  stt_corrections.tsv  stt_vocab_church.txt
orchestrator/config/glossaries/: nazarene.json  presbyterian.json
orchestrator/src/: config.py  main.py
orchestrator/src/api/: admin.py  audio_stream.py  hls_stream.py  listener.py
orchestrator/src/audio/: fmp4.py  hls.py  ogg_opus.py  opus.py  preprocess.py
orchestrator/src/bible/: lookup.py
orchestrator/src/llm/: client.py  glossary.py  prompts.py
orchestrator/src/pipeline/: broadcast.py  callbacks.py  manager.py  orchestrator.py  session.py
orchestrator/src/processors/: base.py  conversation.py  passthrough.py  translation.py
orchestrator/src/stt/: client.py
orchestrator/src/text/: filters.py  korean_postprocess.py
orchestrator/src/tts/: client.py
scripts/: benchmark_stt.py  benchmark_tts_concurrent.py  clean_ref_audio.py  cuda-mps.sh  download_models.sh  generate_test_audio.py  korean_endings.py  live_demo.py  profile_vram.py  run_tts_local.sh  start.sh  start_unified.sh  test_continuous.py  test_continuous_tts.py  test_e2e.py  test_e2e_grammar.py  test_e2e_window.py  test_eos_min_steps.py  (+8 more)
(+64 files in other folders)
