[project]
name = "yedam-sts-orchestrator"
version = "0.1.0"
description = "Real-time speech-to-speech pipeline orchestrator"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
audio = [
    "opuslib>=3.0.1",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
